@@ -1,4 +1,4 @@
-This is version 2013041201 of Test::Regexp, a module to test regular
+This is version 2013041501 of Test::Regexp, a module to test regular
 expressions with.
 
 It's a pure perl module, and should install anywhere using
